# screen-automation

./: .gitignore  LICENSE  README.md  convert_to_pdf.py  get_click_pos.py  pyproject.toml  repeat_screenshot.py
src/windows_gui/: __init__.py
